hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__duplicate_function_definition.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function 'f' is already defined in scope",
                span: 3:13; [33, 34],
                level: Error,
            },
        ],
        inputs: (),
    },
)
