hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__duplicate_function_parameter_name.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Parameter 'n' is already defined",
                span: 1:18; [17, 18],
                level: Error,
            },
        ],
        inputs: (),
    },
)
