hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__duplicate_struct_definition.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Struct 'S' is already defined in scope",
                span: 3:16; [36, 37],
                level: Error,
            },
        ],
        inputs: (),
    },
)
