hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__duplicate_struct_field.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Field 'x' is already defined",
                span: 1:23; [22, 23],
                level: Error,
            },
        ],
        inputs: (),
    },
)
